Announcements no longer overlap the language selection menu.

--- a/css/rex.css
+++ b/css/rex.css
@@ -54,6 +54,7 @@ prm-search-bar {
     background-color: white; }
 
 .rex-announcement {
+  z-index: 10;
   padding: 0;
   width: 100%;
   height: 64px;
