--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -92,7 +92,7 @@ prm-search-bar {
 
 .rex-announcement {
   $background-color: #fffcc4;
-
+  z-index: 10;
   padding: 0;
   width: 100%;
   height: 64px;
